--- a/front/src/locales/ko/translation.json
+++ b/front/src/locales/ko/translation.json
@@ -3,10 +3,33 @@
         "notFound" : "찾을 수 없습니다."
     },
     "prompt" : {
-        "save_new" : "저장",
-        "save_renew" : "적용",
+        "save" : "저장",
+        "save_new" : "새로 저장",
         "error" : {
-            "notFound" : "찾을 수 없습니다."
+            "INVALID_TOKEN" : "잘못된 토큰",
+            "MULTIPLE_EXPRESSION" : "한 표현식에 여러 값이 들어갈 수 없습니다",
+            "MISSING_OPEN_PAREN" : "'('가 없습니다",
+            "MISSING_OPEN_INDEXOR" : "'['가 없습니다",
+            "NO_EXPRESSION" : "빈 표현식",
+            "UNPROCESSED_EXPRESSION_REMAIN" : "표현식 해석에 실패했습니다",
+            "INVALID_FORMULA" : "잘못된 수식",
+            "INVALID_ACCESSOR" : "잘못된 접근자",
+            "INVALID_OPERAND" : "수식 해석 중 오류가 발생했습니다",
+            "MISSING_PARAM_TOKEN" : "표현식 해석 중 오류가 발생했습니다",
+            "INVALID_DIRECTIVE" : "잘못된 지시자",
+            "UNKNOWN_DIRECTIVE" : "알 수 없는 지시자",
+            "INVALID_FRAGMENT" : "프롬프트 해석 중 오류가 발생했습니다",
+            "MISSING_ENDIF" : "ENDIF가 없습니다",
+            "MISSING_ENDFOREACH" : "ENDFOREACH가 없습니다",
+            "DUPLICATE_ELSE_DIRECTIVE" : "ELSE는 한 번만 사용할 수 있습니다",
+            "IDENTIFIER_RESOLVE_FAIL" : "잘못된 식별자",
+
+            "NO_HOOK" : "지원하지 않는 연산",
+            "OPERATOR_NOT_SUPPORTED" : "지원하지 않는 연산",
+            "EXCEPTION_IN_HOOK" : "내부 연산에 오류가 발생습니다",
+            "INVALID_AST_FORMAT" : "잘못된 AST 형식 (내부 오류)",
+            "LOGIC_ERROR" : "내부 문제가 발생했습니다"
         }
     }
 }
+
